compiler/toc-hir-lowering/tests/snapshots/lowering__expression_order.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "var _ := 1 + 2 * 3 + 4"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..22): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..22): []
        StmtItem@(FileId(1), 0..22): ItemId(0)
          ConstVar@(FileId(1), 0..22): var "_"@(FileId(1), 4..5)
            ExprBody@(FileId(1), 9..22)
              Binary@(FileId(1), 9..22): Add
                Binary@(FileId(1), 9..18): Add
                  Literal@(FileId(1), 9..10): Integer(1)
                  Binary@(FileId(1), 13..18): Mul
                    Literal@(FileId(1), 13..14): Integer(2)
                    Literal@(FileId(1), 17..18): Integer(3)
                Literal@(FileId(1), 21..22): Integer(4)

