compiler/toc-hir-lowering/tests/snapshots/lowering__intro_assoc_unqualifieds_module-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\nmodule wrap\n    export ~. unquali\n    module unquali\n        export ~. uwu\n        var uwu : int\n    end unquali\nend wrap\n\nvar uwu : int\nmodule target\n    import uwu, unquali\nend target\n    "
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(7)
    Module@(FileId(1), 0..191): "<root>"@(dummy)
      StmtBody@(FileId(1), 1..186): []
        StmtItem@(FileId(1), 1..122): ItemId(2)
          Module@(FileId(1), 1..122): "wrap"@(FileId(1), 8..12), exports [Const Unqualified local("unquali"@(FileId(1), 46..53))]
            StmtBody@(FileId(1), 39..113): []
              StmtItem@(FileId(1), 39..113): ItemId(1)
                Module@(FileId(1), 39..113): "unquali"@(FileId(1), 46..53), exports [Const Unqualified local("uwu"@(FileId(1), 88..91))]
                  StmtBody@(FileId(1), 84..97): []
                    StmtItem@(FileId(1), 84..97): ItemId(0)
                      ConstVar@(FileId(1), 84..97): var "uwu"@(FileId(1), 88..91)
                        Primitive@(FileId(1), 94..97): Int
        StmtItem@(FileId(1), 124..137): ItemId(3)
          ConstVar@(FileId(1), 124..137): var "uwu"@(FileId(1), 128..131)
            Primitive@(FileId(1), 134..137): Int
        StmtItem@(FileId(1), 138..186): ItemId(6)
          Module@(FileId(1), 138..186): "target"@(FileId(1), 145..151)
            Import@(FileId(1), 163..166): SameAsItem local("uwu"@(FileId(1), 128..131))
            Import@(FileId(1), 168..175): SameAsItem local("unquali"@(FileId(1), 27..34))
            StmtBody@(FileId(1), 176..176): []
error at (FileId(1), 168..175): `uwu` is already declared in this scope
| note for (FileId(1), 163..166): `uwu` previously imported here
| error for (FileId(1), 168..175): `uwu` is an unqualified export of `unquali`
| info: importing a class or module also imports its unqualified exports

