compiler/toc-hir-lowering/tests/snapshots/lowering__intro_assoc_unqualifieds_module-3.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\nmodule wrapA\n    export ~.a\n    module a\n        export ~. var uwu\n        var uwu : int\n    end a\nend wrapA\n\nmodule wrapB\n    export ~.b\n    module b\n        export ~. var uwu\n        var uwu : int\n    end b\nend wrapB\n\nmodule target\n    import a, b\nend target\n    "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(9)
    Module@(src/main.t:0..266): "<root>"@(dummy)
      StmtBody@(src/main.t:1..261): []
        StmtItem@(src/main.t:1..109): ItemId(2)
          Module@(src/main.t:1..109): "wrapA"@(src/main.t:8..13), exports [Const Unqualified local("a"@(src/main.t:40..41))]
            StmtBody@(src/main.t:33..99): []
              StmtItem@(src/main.t:33..99): ItemId(1)
                Module@(src/main.t:33..99): "a"@(src/main.t:40..41), exports [Var Unqualified local("uwu"@(src/main.t:80..83))]
                  StmtBody@(src/main.t:76..89): []
                    StmtItem@(src/main.t:76..89): ItemId(0)
                      ConstVar@(src/main.t:76..89): var "uwu"@(src/main.t:80..83)
                        Primitive@(src/main.t:86..89): Int
        StmtItem@(src/main.t:111..219): ItemId(5)
          Module@(src/main.t:111..219): "wrapB"@(src/main.t:118..123), exports [Const Unqualified local("b"@(src/main.t:150..151))]
            StmtBody@(src/main.t:143..209): []
              StmtItem@(src/main.t:143..209): ItemId(4)
                Module@(src/main.t:143..209): "b"@(src/main.t:150..151), exports [Var Unqualified local("uwu"@(src/main.t:190..193))]
                  StmtBody@(src/main.t:186..199): []
                    StmtItem@(src/main.t:186..199): ItemId(3)
                      ConstVar@(src/main.t:186..199): var "uwu"@(src/main.t:190..193)
                        Primitive@(src/main.t:196..199): Int
        StmtItem@(src/main.t:221..261): ItemId(8)
          Module@(src/main.t:221..261): "target"@(src/main.t:228..234)
            Import@(src/main.t:246..247): SameAsItem local("a"@(src/main.t:27..28))
            Import@(src/main.t:249..250): SameAsItem local("b"@(src/main.t:137..138))
            StmtBody@(src/main.t:251..251): []
error at src/main.t:246..247: `uwu` is already declared in this scope
| note for src/main.t:246..247: `a` has an unqualified export named `uwu`
| error for src/main.t:249..250: `b` also has an unqualified export named `uwu`
| info: importing a class or module also imports its unqualified exports
