compiler/toc-hir-lowering/tests/snapshots/lowering__intro_assoc_unqualifieds_module-4.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\nmodule wrap\n    export ~. unquali\n    module unquali\n        export ~. uwu\n        var uwu : int\n    end unquali\nend wrap\n\nvar * uwu : int\nmodule target\n    import unquali\nend target\n    "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(6)
    Module@(src/main.t:0..188): "<root>"@(dummy)
      StmtBody@(src/main.t:1..183): []
        StmtItem@(src/main.t:1..122): ItemId(2)
          Module@(src/main.t:1..122): "wrap"@(src/main.t:8..12), exports [Const Unqualified local("unquali"@(src/main.t:46..53))]
            StmtBody@(src/main.t:39..113): []
              StmtItem@(src/main.t:39..113): ItemId(1)
                Module@(src/main.t:39..113): "unquali"@(src/main.t:46..53), exports [Const Unqualified local("uwu"@(src/main.t:88..91))]
                  StmtBody@(src/main.t:84..97): []
                    StmtItem@(src/main.t:84..97): ItemId(0)
                      ConstVar@(src/main.t:84..97): var "uwu"@(src/main.t:88..91)
                        Primitive@(src/main.t:94..97): Int
        StmtItem@(src/main.t:124..139): ItemId(3)
          ConstVar@(src/main.t:124..139): var "uwu"@(src/main.t:130..133)
            Primitive@(src/main.t:136..139): Int
        StmtItem@(src/main.t:140..183): ItemId(5)
          Module@(src/main.t:140..183): "target"@(src/main.t:147..153)
            Import@(src/main.t:165..172): SameAsItem local("unquali"@(src/main.t:27..34))
            StmtBody@(src/main.t:173..173): []
error at src/main.t:165..172: `uwu` is already declared in this scope
| note for src/main.t:130..133: `uwu` previously declared here
| error for src/main.t:165..172: `uwu` is an unqualified export of `unquali`
| info: importing a class or module also imports its unqualified exports
