compiler/toc-hir-lowering/tests/snapshots/lowering__intro_assoc_unqualifieds_module-7.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\nmodule wrap\n    export ~. unquali\n    module unquali\n        export ~. uwu\n        var uwu : int\n    end unquali\nend wrap\n\nmodule target\n    import unquali\n\n    var uwu : int\nend target\n    "
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(6)
    Module@(FileId(1), 0..191): "<root>"@(dummy)
      StmtBody@(FileId(1), 1..186): []
        StmtItem@(FileId(1), 1..122): ItemId(2)
          Module@(FileId(1), 1..122): "wrap"@(FileId(1), 8..12), exports [Const Unqualified local("unquali"@(FileId(1), 46..53))]
            StmtBody@(FileId(1), 39..113): []
              StmtItem@(FileId(1), 39..113): ItemId(1)
                Module@(FileId(1), 39..113): "unquali"@(FileId(1), 46..53), exports [Const Unqualified local("uwu"@(FileId(1), 88..91))]
                  StmtBody@(FileId(1), 84..97): []
                    StmtItem@(FileId(1), 84..97): ItemId(0)
                      ConstVar@(FileId(1), 84..97): var "uwu"@(FileId(1), 88..91)
                        Primitive@(FileId(1), 94..97): Int
        StmtItem@(FileId(1), 124..186): ItemId(5)
          Module@(FileId(1), 124..186): "target"@(FileId(1), 131..137)
            Import@(FileId(1), 149..156): SameAsItem local("unquali"@(FileId(1), 27..34))
            StmtBody@(FileId(1), 162..175): []
              StmtItem@(FileId(1), 162..175): ItemId(4)
                ConstVar@(FileId(1), 162..175): var "uwu"@(FileId(1), 166..169)
                  Primitive@(FileId(1), 172..175): Int
error in file FileId(1) at 166..169: `uwu` is already declared in this scope
| note in file FileId(1) for 149..156: `uwu` is an unqualified import from `unquali`
| error in file FileId(1) for 166..169: `uwu` redeclared here
| info: importing a class or module also imports its unqualified exports

