compiler/toc-hir-lowering/tests/snapshots/lowering__intro_assoc_unqualifieds_module.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\nmodule _\n    export ~. waw\n    module waw\n        export ~. var sus\n        var sus : int\n    end waw\nend _\n\nmodule target\n    import waw\n    sus := 1\nend target\n    "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(5)
    Module@(src/main.t:0..167): "<root>"@(dummy)
      StmtBody@(src/main.t:1..162): []
        StmtItem@(src/main.t:1..108): ItemId(2)
          Module@(src/main.t:1..108): "_"@(src/main.t:8..9), exports [Const Unqualified local("waw"@(src/main.t:39..42))]
            StmtBody@(src/main.t:32..102): []
              StmtItem@(src/main.t:32..102): ItemId(1)
                Module@(src/main.t:32..102): "waw"@(src/main.t:39..42), exports [Var Unqualified local("sus"@(src/main.t:81..84))]
                  StmtBody@(src/main.t:77..90): []
                    StmtItem@(src/main.t:77..90): ItemId(0)
                      ConstVar@(src/main.t:77..90): var "sus"@(src/main.t:81..84)
                        Primitive@(src/main.t:87..90): Int
        StmtItem@(src/main.t:110..162): ItemId(4)
          Module@(src/main.t:110..162): "target"@(src/main.t:117..123)
            Import@(src/main.t:135..138): SameAsItem local("waw"@(src/main.t:24..27))
            StmtBody@(src/main.t:143..151): []
              Assign@(src/main.t:143..151)
                Name@(src/main.t:143..146): "sus"@(src/main.t:65..68)
                Literal@(src/main.t:150..151): Integer(1)
