compiler/toc-hir-lowering/tests/snapshots/lowering__intro_import_defs_module-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    var a_def : int\n    module _\n        import a_def\n    end _"
---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(3)
    Module@(FileId(1), 0..64): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..64): []
        StmtItem@(FileId(1), 5..20): ItemId(0)
          ConstVar@(FileId(1), 5..20): var "a_def"@(FileId(1), 9..14)
            Primitive@(FileId(1), 17..20): Int
        StmtItem@(FileId(1), 25..64): ItemId(2)
          Module@(FileId(1), 25..64): "_"@(FileId(1), 32..33)
            Import@(FileId(1), 49..54): SameAsItem local("a_def"@(FileId(1), 9..14))
            StmtBody@(FileId(1), 59..59): []

